old session service impl removed, small rafactor